# fast23-GLCache

./: README.md
micro-implementation/: CMakeLists.txt
prototype/: Cargo.toml  README.md
prototype/src/: main.rs
prototype/src/bench/: bench.rs  cache.rs  cmd.rs  mod.rs  reader.rs  request.rs
prototype/src/l2cache/: CHANGES  Cargo.toml
prototype/src/l2cache/src/: builder.rs  l2cache.rs  lib.rs  rand.rs
prototype/src/l2cache/src/eviction/: mod.rs  policy.rs
prototype/src/l2cache/src/hashtable/: hash_bucket.rs  mod.rs
prototype/src/l2cache/src/item/: header.rs  mod.rs  raw.rs  reserved.rs
prototype/src/l2cache/src/learning/: learner.rs  mod.rs
prototype/src/l2cache/src/segments/: error.rs  header.rs  mod.rs  segment.rs  segments.rs
prototype/src/l2cache/src/ttl_buckets/: mod.rs  ttl_bucket.rs  ttl_buckets.rs
prototype/src/segcachev1/: Cargo.toml
prototype/src/segcachev1/src/: lib.rs  seg.rs
prototype/src/segcachev1/src/hashtable/: mod.rs
prototype/src/segcachev1/src/item/: raw.rs
prototype/src/segcachev1/src/segments/: header.rs  segment.rs  segments.rs
prototype/src/segcachev1/src/ttl_buckets/: mod.rs  ttl_bucket.rs  ttl_buckets.rs
