[package]
name = "l2cache"
version = "0.1.0"
edition = "2018"
description = "a learned log-structured in-memory storage"
homepage = "https://pelikan.io"
repository = "https://github.com/twitter/pelikan"
license = "Apache-2.0"

[features]

# enables setting/checking magic strings
magic = []
oracle_reuse = []
oracle_item_selection = []
offline_segment_utility = []
merge_debug1 = []
last_access_time = []

# metafeatures
debug = ["magic", ]

# default set of enabled features
# default = ["oracle_reuse", "oracle_item_selection", ]
# default = ["oracle_reuse", "offline_segment_utility", ]
default = []

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
# lto = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
ahash = "0.7.2"
memmap2 = "0.5.0"
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon"}
# rand = { version = "0.8.3", features = ["small_rng", "getrandom"] }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"] }
rand_chacha = { version = "0.3.0" }
rand_xoshiro = { version = "0.6.0" }
rustcommon-logger = { git = "https://github.com/1a1a11a/rustcommon"}
rustcommon-time = { git = "https://github.com/1a1a11a/rustcommon"}
thiserror = "1.0.24"
ordered-float = "2.8.0"
serde = {version="1.0.128", features = ["derive"]}
serde_json = "1.0"
byteorder = "1.4"
lazy_static = "1.3.0"
backtrace = "0.3.63"
smallvec = "1.6.0"
xgboost = {git = "https://github.com/1a1a11a/rust-xgboost", rev = "360af10" }
fastrand = "1.7.0"
log = { version = "0.4.16", features = ["max_level_info", "release_max_level_info"]}

# xgboost-sys = {git = "https://github.com/1a1a11a/rust-xgboost"}
# xgboost = {version = "0.2.0"}

[dev-dependencies]
criterion = "0.3.4"
